--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,5 @@ jobs:
         with:
           ruby-version: ${{ matrix.ruby }}
           bundler-cache: true
-      - name: Run specs
-        run: bundle exec rspec
-      - name: Run rubocop
-        run: bundle exec rubocop
+      - name: Run the default task
+        run: bundle exec rake
